# Kirikiroid2Yuri

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: build_android.yml
project/android/: build.gradle  gradle.properties  settings.gradle
project/android/app/: .gitignore  AndroidManifest.xml  build.gradle  sign.jks
project/android/app/cpp/: Application.mk  CMakeLists.txt  krkr2_android.cpp
project/android/app/cpp/src/: android_sdl.cpp
project/android/app/java/com/yuri/kirikiri2/: MainActivity.java
project/android/app/java/org/tvp/kirikiri2/: KR2Activity.java
project/android/app/jni/: Android.mk
project/android/app/jni/src/: android_cocos.cpp  android_sdl.cpp
project/android/app/res/values/: strings.xml
project/android/app/src/com/yuri/kirikiri2/: Kirikiroid2.java
project/android/app/src/org/tvp/kirikiri2/: MediaStoreHack.java
project/android/gradle/wrapper/: gradle-wrapper.properties
script/: _androida64.sh  _fetch.sh  cross_androida64.sh
src/cocos/: AppDelegate.cpp
src/core/: CMakeLists.txt
src/core/base/: 7zArchive.cpp  SysInitIntf.cpp  UtilStreams.cpp  ZIPArchive.cpp
src/core/environ/: Application.cpp  XP3ArchiveRepack.cpp
src/core/environ/ConfigManager/: GlobalConfigManager.cpp  LocaleConfigManager.cpp
src/core/environ/android/: AndroidUtils.cpp
src/core/environ/cocos2d/: CustomFileUtils.cpp  MainScene.cpp
src/core/environ/ui/: FileSelectorForm.cpp  MainFileSelectorForm.cpp
src/core/sound/: VorbisWaveDecoder.cpp  xmmlib.h
src/core/sound/ARM/: wavemix_arm.c
src/core/sound/win32/: WaveMixer.cpp
src/core/tjs2/: tjsConfig.cpp  tjsUtils.h
src/core/utils/minizip/: ioapi.cpp
src/core/visual/: FontImpl.cpp  FreeType.h  FreeTypeFace.h  GraphicsLoaderIntf.cpp  LoadJPEG.cpp  tvpgl.cpp
src/core/visual/ARM/: tvpgl_arm.cpp
src/core/visual/gl/: aligned_allocator.h
src/plugins/: CMakeLists.txt
